fix jumpy scrollbar issue yet again

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -12,7 +12,7 @@
 
 body {
   background-color: #F1F1F3;
-  overflow: auto;
+  overflow-y: scroll;
 }
 
 
